--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -249,3 +249,17 @@ Hides the menu at `48em`, but modify this based on your app's needs.
         left: 150px;
     }
 }
+
+#search-bar{
+    width: 100%;
+}
+#search-result-container{
+    transition: opacity .2s, max-height .2s;
+    max-height: 350px;
+    overflow-y: auto;
+}
+#search-result-container.hide{
+    opacity: 0;
+    pointer-events: none;
+    max-height: 0;
+}
