--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -1,6 +1,8 @@
 :root{
     --color: #777;
     --bg-color: #eee;
+    --sidebar-width: 350px;
+    --min-content-width: 350px;
 }
 body {
     color: var(--color);
@@ -42,12 +44,13 @@ This is the parent `<div>` that contains the menu and the content area.
 */
 #layout {
     position: relative;
-    left: 0;
-    padding-left: 0;
+    display: grid;
+    grid-template-columns: 0 1fr;
+    min-height: 100svh;
 }
-    #layout.active #menu {
-        transform: translateX(0);
-    }
+#layout.active {
+    grid-template-columns: var(--sidebar-width) minmax(var(--min-content-width), 1fr);
+}
 /*
 The content `<div>` is where all your content goes.
 */
@@ -55,9 +58,8 @@ The content `<div>` is where all your content goes.
     margin: 0 auto;
     box-sizing: border-box;
     min-height: calc(100svh - 200px);
-    padding: 2rem 2rem 0 2rem;
+    padding: 3rem 2rem 2rem 2rem;
     max-width: 800px;
-    margin-bottom: 50px;
     line-height: 1.6em;
 }
 
@@ -94,9 +96,7 @@ appears on the left side of the page.
 */
 
 #menu {
-    transform: translateX(-100%);
-    max-width: 350px;
-    position: fixed;
+    max-width: var(--sidebar-width);
     top: 0;
     left: 0;
     bottom: 0;
@@ -114,6 +114,8 @@ appears on the left side of the page.
     }
 
     #menu nav{
+        position: sticky;
+        top: 0;
         overflow-y: auto;
     }
 
@@ -176,17 +178,20 @@ how it works:
 small screens.
 */
 a#menuLink {
-    position: absolute;
+    position: fixed;
     display: block; /* show this only on small screens */
     top: 0;
-    left: 100%; /* "#menu width" */
     background: rgba(0,0,0,0.7);
     font-size: 10px; /* change this value to increase/decrease button size */
     z-index: 10;
     width: 2em;
     height: auto;
     padding: 2.1em 1.6em;
+    
 }
+    #layout.active a#menuLink{
+        transform: translateX(var(--sidebar-width));
+    }
 
     .menu-link:hover,
     .menu-link:focus {
@@ -221,6 +226,15 @@ a#menuLink {
 
 /* -- Responsive Styles (Media Queries) ------------------------------------- */
 
+@media not (min-width: 48em){
+    body:has(#layout.active){
+        overflow: hidden;
+    }
+    #layout.active main{
+        filter: blur(5px);
+    }
+}
+
 /*
 Hides the menu at `48em`, but modify this based on your app's needs.
 */
@@ -233,29 +247,13 @@ Hides the menu at `48em`, but modify this based on your app's needs.
     }
 
     #layout {
-        left: 0;
-    }
-    main{
-        padding-left: 350px;
+        grid-template-columns: var(--sidebar-width) 1fr;
     }
     #menu {
         transform: translateX(0);
     }
     #menuLink{
         display: none !important;
-    }
-}
-
-@media (max-width: 48em) {
-    /* Only apply this when the window is small. Otherwise, the following
-    case results in extra padding on the left:
-        * Make the window small.
-        * Tap the menu to trigger the active state.
-        * Make the window large again.
-    */
-    #layout.active {
-        position: relative;
-        left: 150px;
     }
 }
 
